2000-10-24  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSString.m: Implement ([-substringWithRange:]) and
	([-substringFromRange:]) equally.  The 'from' method is the
	'official OpenStep' one, the 'with' method is a MacOS-X compatibility
	addition.
	* Source/NSAttributedString.m: Added ([-attributedSubstringWithRange:])
	in the expectation that Apple will rename the method and remove
	([-attributedSubstringFromRange:])
	* Source/NSScanner.m: Use substringWithRange.
	* Source/NSProxy.m: Implement ([-forward::]) to use
	([-forwardInvocation:]).  Implement ([-conformsToProtocol:]) to raise
	exception, Implement ([-respondsToSelector:]) to raise exception.
	* Source/NSDistantObject.m: Implement ([-conformsToProtocol:]) to
	forward to remote.  Implement ([-respondsToSelector:]) to forward.

2000-10-24  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSAttributedString.m: Added begin/endEditing to all
	complex methods on NSMutableAttributedString as necessary for
	NSTextStorage. 
	* Source/GSString.m: Changed all substringFromRange: to
	substringWithRange: as this is the basic method.

2000-10-23  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSString.m: ([-fastestEncoding]), ([-smallestEncoding])
	implemented to return NSUnicodeStringEncoding.  Use new string
	classes more effectively - let GSString turn itsself into either
	GSCString or GSUstring when initialised.
	Merged in code from propList.h
	* Source/GSString.m: ([-dataUsingEncoding:allowLossyConversion:])
	bugfixes for cString reported by Freed Kiefer
	Removed 'ascii' flag - more trouble than a minor optimisation is
	worth.
	Fixed transmute() to be careful about freeing old string.
	* Source/Unicode.m: encode_ustrtostr_strict() return 0 on failure.

2000-10-21  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSNull.h: New placeholder class.
	* Source/NSNull.m: New placeholder class.
	* Source/GNUmakefile: Build NSNull and install header.